cmake_minimum_required(VERSION 3.0)
get_filename_component(app ${CMAKE_CURRENT_SOURCE_DIR} NAME)
add_executable(${app} main.cpp)

find_package(CURL REQUIRED)
target_include_directories(${app} PUBLIC ${CURL_INCLUDE_DIRS})
target_link_libraries(${app} ${CURL_LIBRARIES})

if(APPLE)
  find_library(Security Security REQUIRED)
  find_library(CoreFoundation CoreFoundation REQUIRED)
  target_link_libraries(${app} ${Security} ${CoreFoundation})
else()
  find_package(OpenSSL REQUIRED)
  target_include_directories(${app} PRIVATE ${OPENSSL_INCLUDE_DIR})
  target_link_libraries(${app} ${OPENSSL_CRYPTO_LIBRARY})
endif()
